--- a/karate/templates/karate/main.html
+++ b/karate/templates/karate/main.html
@@ -1,51 +1,155 @@
 {% load static %}
-<html data-wf-page="66a205b868fe9e77cef34d21" data-wf-site="66a205b868fe9e77cef34d1b">
+<html data-wf-page="66ab4aa390c191aa5cae09d0" data-wf-site="66ab4aa390c191aa5cae09bf">
 <head>
   <meta charset="utf-8">
-  <title>Карате</title>
+  <title>Основа</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta content="Webflow" name="generator">
-  <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
-  <link rel="stylesheet" href="{% static 'css/webflow.css' %}">
-  <link rel="stylesheet" href="{% static 'css/karate-tretiy-variant.webflow.css' %}">
+
+  <link rel="stylesheet" href="{% static 'css/normalize.css' %}" type="text/css">
+  <link rel="stylesheet" href="{% static 'css/webflow.css' %}" type="text/css">
+  <link rel="stylesheet" href="{% static 'css/osnova-c72d2b.webflow.css' %}" type="text/css">
+
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
+
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic","Vollkorn:400,400italic,700,700italic"]  }});</script>
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <script type="text/javascript">
+    WebFont.load({
+      google: {
+        families: ["Vollkorn:400,400italic,700,700italic", "ADLaM Display:regular"]
+      }
+    });
+  </script>
+
+  <script type="text/javascript">
+    !function(o, c) {
+      var n = c.documentElement, t = " w-mod-";
+      n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
+    }(window, document);
+  </script>
+
   <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
   <link rel="apple-touch-icon" href="{% static 'images/webclip.png' %}">
 </head>
 <body class="body">
-  <section class="srsrv">
-    <div class="div-block"></div>
-    <div class="div-block-2"></div>
-  </section>
-  <section class="srsrv-copy">
-    <div class="w-layout-blockcontainer container-2 w-container"><img src="{% static 'images/logo_akr.png' %}" loading="lazy" width="78" alt="" class="image-3"></div>
-    <div class="w-layout-blockcontainer container-3 w-container">
-      <h4 class="heading-3">Ассоциация Киокушинкай России (AKR)</h4>
-      <p class="paragraph-2">является официальной организацией, занимающейся развитием и популяризацией карате киокушинкай на территории Российской Федерации. <br>Киокушинкай — это стиль контактного карате, основанный мастером Масутацу Оямой в середине XX века. Этот стиль известен своей жесткостью, реалистичностью и акцентом на полный контакт в спаррингах.</p>
+  <section class="section">
+    <div class="div-block">
+      <img src="{% static 'images/Frame-1.png' %}" loading="lazy" sizes="(max-width: 991px) 16vw, (max-width: 1919px) 140px, 210px"
+           srcset="{% static 'images/Frame-1-p-500.png' %} 500w,
+                   {% static 'images/Frame-1-p-800.png' %} 800w,
+                   {% static 'images/Frame-1-p-1080.png' %} 1080w,
+                   {% static 'images/Frame-1-p-1600.png' %} 1600w,
+                   {% static 'images/Frame-1-p-2000.png' %} 2000w,
+                   {% static 'images/Frame-1-p-2600.png' %} 2600w,
+                   {% static 'images/Frame-1.png' %} 3000w"
+           alt="" class="image">
+    </div>
+    <div class="w-layout-blockcontainer container-2 w-container">
+      <div class="div-block-2-copy-copy"></div>
+      <div class="div-block-3">
+        <a href="#" class="button-4-copy w-button"><br>Главная</a>
+        <a href="#" class="button-4 w-button"><br>Страны партнеры</a>
+        <a href="#" class="button-5 w-button"><br>Руководство</a>
+        <a href="#" class="button-6 w-button"><br>Мероприятия</a>
+        <a href="#" class="button-7 w-button"><br>Медия</a>
+        <a href="#" class="button-8 w-button"><br>Контакты</a>
+      </div>
+    </div>
+    <div class="div-block-5">
+      <a href="#" class="button-19 w-button">Рус</a>
+      <a href="#" class="button-18 w-button">Eng</a>
+      <a href="#" class="button-17 w-button">Войти</a>
     </div>
   </section>
-  <section class="section-8">
-    <a href="#" class="button-22 w-button">Главная</a>
-    <a href="#" class="button-23 w-button">Мероприятия</a>
-    <a href="#" class="button-24 w-button">Руководство</a>
-    <a href="#" class="button-25 w-button">Сотрудничество</a>
-    <a href="#" class="button-26 w-button">Контакты</a>
+  <section class="section-4-copy"></section>
+  <section class="section-5">
+    <div data-delay="3000" data-animation="cross" class="slider w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="true" data-disable-swipe="true" data-autoplay-limit="0" data-nav-spacing="8" data-duration="3000" data-infinite="true">
+      <div class="w-slider-mask">
+        <div class="w-slide">
+          <img sizes="100vw"
+               srcset="{% static 'images/ццц-p-500.jpg' %} 500w,
+                       {% static 'images/ццц-p-800.jpg' %} 800w,
+                       {% static 'images/ццц-p-1080.jpg' %} 1080w,
+                       {% static 'images/ццц-p-1600.jpg' %} 1600w,
+                       {% static 'images/ццц-p-2000.jpg' %} 2000w,
+                       {% static 'images/ццц.jpg' %} 2560w"
+               alt="" src="{% static 'images/ццц.jpg' %}" loading="lazy" class="image-2">
+        </div>
+        <div class="w-slide">
+          <img sizes="100vw"
+               srcset="{% static 'images/iNxdwW9zeBA-p-500.jpg' %} 500w,
+                       {% static 'images/iNxdwW9zeBA-p-800.jpg' %} 800w,
+                       {% static 'images/iNxdwW9zeBA-p-1080.jpg' %} 1080w,
+                       {% static 'images/iNxdwW9zeBA-p-1600.jpg' %} 1600w,
+                       {% static 'images/iNxdwW9zeBA-p-2000.jpg' %} 2000w,
+                       {% static 'images/iNxdwW9zeBA.jpg' %} 2560w"
+               alt="" src="{% static 'images/iNxdwW9zeBA.jpg' %}" loading="lazy" class="image-2">
+        </div>
+        <div class="w-slide">
+          <img sizes="100vw"
+               srcset="{% static 'images/RVkkHT0IEfI-p-500.jpg' %} 500w,
+                       {% static 'images/RVkkHT0IEfI-p-800.jpg' %} 800w,
+                       {% static 'images/RVkkHT0IEfI-p-1080.jpg' %} 1080w,
+                       {% static 'images/RVkkHT0IEfI-p-1600.jpg' %} 1600w,
+                       {% static 'images/RVkkHT0IEfI-p-2000.jpg' %} 2000w,
+                       {% static 'images/RVkkHT0IEfI.jpg' %} 2560w"
+               alt="" src="{% static 'images/RVkkHT0IEfI.jpg' %}" loading="lazy" class="image-2">
+        </div>
+        <div class="w-slide">
+          <img sizes="100vw"
+               srcset="{% static 'images/hXn9COwgbYU-p-500.jpg' %} 500w,
+                       {% static 'images/hXn9COwgbYU-p-800.jpg' %} 800w,
+                       {% static 'images/hXn9COwgbYU-p-1080.jpg' %} 1080w,
+                       {% static 'images/hXn9COwgbYU-p-1600.jpg' %} 1600w,
+                       {% static 'images/hXn9COwgbYU-p-2000.jpg' %} 2000w,
+                       {% static 'images/hXn9COwgbYU.jpg' %} 2560w"
+               alt="" src="{% static 'images/hXn9COwgbYU.jpg' %}" loading="lazy" class="image-2">
+        </div>
+      </div>
+      <div class="w-slider-arrow-left">
+        <div class="w-icon-slider-left"></div>
+      </div>
+      <div class="w-slider-arrow-right">
+        <div class="w-icon-slider-right"></div>
+      </div>
+      <div class="slide-nav w-slider-nav w-slider-nav-invert w-round w-num"></div>
+    </div>
   </section>
-  <section class="section-5"><img src="{% static 'images/2024-07-25-13.18.58.jpg' %}" loading="lazy" sizes="(max-width: 1439px) 90vw, (max-width: 1919px) 1280px, 90vw" srcset="{% static 'images/2024-07-25-13.18.58-p-500.jpg' %} 500w, {% static 'images/2024-07-25-13.18.58-p-800.jpg' %} 800w, {% static 'images/2024-07-25-13.18.58-p-1080.jpg' %} 1080w, {% static 'images/2024-07-25-13.18.58.jpg' %} 1280w" alt="" class="image-4"></section>
-  <section class="srsrv">
-    <div class="div-block"></div>
-    <div class="div-block-2"></div>
-  </section>
+  <section class="section-4"></section>
   <section class="section-6">
-    <div class="w-layout-blockcontainer container-6 w-container">
-      <div class="w-layout-blockcontainer container-7 w-container">
+    <div class="w-layout-blockcontainer container-3 w-container">
+      <h2 class="heading">Мероприятия</h2>
+    </div>
+    <div class="w-layout-blockcontainer container-4 w-container">
+      <div class="w-layout-blockcontainer container-5 w-container">
+        <h3 class="heading-2">Чемпионат мира</h3>
+        <p class="paragraph">Место проведение: Казахстан, Алмата<br>Даты: 25-27 января 2025 года<br>Информация: Приглашаем вас на <strong class="bold-text">Международный турнир по карате</strong>, который пройдет в красивом городе Алматы, Казахстан, с 25 по 27 января 2025 года.</p>
+      </div>
+      <div class="w-layout-blockcontainer container-5 w-container">
+        <h3 class="heading-2">Семинар для судей</h3>
+        <p class="paragraph">Место проведение: Австралия, Сидней<br>Даты: 21-26 июня 2025 года<br>Информация: Это масштабное событие объединит спортсменов и поклонников карате со всего мира.</p>
+      </div>
+      <div class="w-layout-blockcontainer container-5 w-container">
+        <h3 class="heading-2">Всемирная спартакиада</h3>
+        <p class="paragraph">Место проведение: ЮАР, Кейптаун<br>Даты: 07-08 февраля 2025 года<br>Информация: Это уникальное спортивное событие объединит юных спортсменов со всего региона для демонстрации их таланта и упорства.</p>
+      </div>
+    </div>
+  </section>
+  <section class="section-9">
+    <div class="w-layout-blockcontainer container-9-copy w-container">
+      <div class="w-layout-blockcontainer container-8 w-container">
         <h4 class="heading-4">Обратная связь</h4>
         <div class="w-form">
-          <form id="email-form" name="email-form" data-name="Email Form" method="get" data-wf-page-id="66a205b868fe9e77cef34d21" data-wf-element-id="3c0812db-1a41-d0e3-38b9-766d1fc1e321"><label for="name" class="field-label">Имя</label><input class="w-input" maxlength="256" name="name" data-name="Name" placeholder="" type="text" id="name"><label for="email" class="field-label-2">Почта</label><input class="w-input" maxlength="256" name="email" data-name="Email" placeholder="" type="email" id="email" required=""><label for="field" class="field-label-3">Ваше сообщение</label><textarea placeholder="" maxlength="5000" id="field" name="field" data-name="Field" class="w-input"></textarea><input type="submit" data-wait="Please wait..." class="submit-button w-button" value="Отправить"></form>
+          <form id="email-form" name="email-form" data-name="Email Form" method="get" data-wf-page-id="66ab4aa390c191aa5cae09d0" data-wf-element-id="ade725a3-4ace-50b9-b823-bbe32c78f4e7">
+            <label for="name" class="field-label-2">Имя</label>
+            <input class="w-input" maxlength="256" name="name" data-name="Name" placeholder="" type="text" id="name">
+            <label for="email" class="field-label-2">Почта</label>
+            <input class="w-input" maxlength="256" name="email" data-name="Email" placeholder="" type="email" id="email" required="">
+            <label for="field" class="field-label-2">Ваше сообщение</label>
+            <textarea id="field" name="field" maxlength="5000" data-name="Field" placeholder="" class="w-input"></textarea>
+            <input type="submit" data-wait="Please wait..." class="submit-button w-button" value="Отправить">
+          </form>
           <div class="w-form-done">
             <div>Thank you! Your submission has been received!</div>
           </div>
@@ -53,24 +157,23 @@
             <div>Oops! Something went wrong while submitting the form.</div>
           </div>
         </div>
-        <section class="section-7"></section>
       </div>
     </div>
-    <div class="w-layout-blockcontainer container-6-copy w-container">
-      <h2>Ассоциация каратэ России (АКР)</h2>
-      <div class="text-block"><strong>Ассоциация каратэ России (АКР)</strong> — это крупнейшая и наиболее авторитетная организация, объединяющая различные стили и направления каратэ в России. АКР занимается развитием, популяризацией и поддержкой каратэ как спортивного и боевого искусства на всей территории Российской Федерации.<br><br><strong>Основные задачи и цели АКР</strong>:<br>‍<br>Развитие и популяризация каратэ: АКР работает над расширением базы занимающихся каратэ, проводит многочисленные соревнования, семинары и мастер-классы, а также поддерживает учебные заведения и клубы.<br><br>Единая система сертификации: Организация занимается сертификацией тренеров, судей и спортсменов, обеспечивая высокие стандарты обучения и оценки навыков.<br><br>Соревнования и чемпионаты: АКР организует и проводит соревнования различного уровня, включая региональные, всероссийские и международные чемпионаты. Это позволяет выявлять и поддерживать талантливых спортсменов, а также повышать уровень мастерства участников.<br><br>Сотрудничество с международными организациями: АКР активно сотрудничает с международными федерациями и ассоциациями каратэ, что позволяет российским спортсменам участвовать в международных соревнованиях и обмениваться опытом с коллегами из других стран.<br><br>Методическая поддержка: Организация разрабатывает и распространяет методические материалы для тренеров и спортсменов, проводит тренинги и курсы повышения квалификации.<br><br><strong>Структура и руководство:<br><br></strong>АКР имеет четко структурированную организационную систему, включающую региональные отделения и специализированные комитеты, отвечающие за различные аспекты деятельности. Руководство АКР состоит из избранных представителей, включая президента, вице-президентов и членов правления, которые отвечают за стратегическое развитие и оперативное управление.<br><br><strong>Важные мероприятия и достижения:</strong><br><br>АКР регулярно проводит значимые мероприятия, такие как чемпионаты России, Кубки России, а также международные турниры. Важным достижением АКР является признание российскими и международными спортивными организациями, что подтверждается высоким уровнем организации соревнований и успешными выступлениями российских спортсменов на мировой арене.<br><br>АКР продолжает активно работать над развитием каратэ в России, привлекая все больше новых спортсменов и повышая уровень мастерства и популярности этого боевого искусства в стране.<strong><br><br>‍</strong></div>
+    <div class="w-layout-blockcontainer container-6-copy-copy w-container">
+      <h2 class="heading-5">Международная общественная организация «ВСЕМИРНАЯ ОРГАНИЗАЦИЯ КИОКУШИН»</h2>
+      <div class="text-block">
+        <strong>Всемирная Организация Киокушин (ВОК)</strong>— это одна из крупнейших и наиболее авторитетных организаций, объединяющая различные школы и направления киокушин карате по всему миру. ВКК занимается развитием, популяризацией и поддержкой киокушин карате как спортивного и боевого искусства на международной арене.<strong><br>‍<br>Развитие и популяризация киокушин:<br>‍</strong><br>ВОК активно работает над увеличением числа практикующих киокушин, проводит многочисленные соревнования, семинары и мастер-классы. Организация поддерживает школы и клубы киокушин во всех уголках мира, привлекая новые поколения к этому виду боевых искусств.<br><br><strong>Единая система сертификации:</strong><br><br>Организация занимается сертификацией тренеров, судей и спортсменов, обеспечивая высокий уровень обучения и оценки навыков. Это гарантирует, что все практикующие получают качественное и стандартизированное обучение, соответствующее мировым стандартам.<br><br><strong>Соревнования и чемпионаты:</strong><br><br>ВОК организует и проводит соревнования различного уровня, включая национальные, континентальные и мировые чемпионаты. Эти мероприятия помогают выявлять и поддерживать талантливых спортсменов, а также способствуют повышению их мастерства.<br><br><strong>Сотрудничество с международными организациями:</strong><br><br>ВОК поддерживает тесные связи с другими международными федерациями и ассоциациями киокушин карате, что позволяет обмениваться опытом и лучшими практиками с коллегами из разных стран, а также расширяет возможности участия спортсменов в международных соревнованиях.<br><br><strong>Методическая поддержка:</strong><br><br>Организация разрабатывает и распространяет учебные и методические материалы для тренеров и спортсменов, проводит тренинги и курсы повышения квалификации. Это позволяет поддерживать высокий уровень подготовки и улучшать навыки всех участников движения киокушин.<strong><br><br>‍</strong>
+      </div>
     </div>
   </section>
-  <section class="srsrv">
-    <div class="div-block"></div>
-    <div class="div-block-2"></div>
-  </section>
   <section class="srsrv-copy-copy">
-    <div class="text-block-2"><strong>ФАКТИЧЕСКИЙ АДРЕС:</strong>105005, г. Москва, ул. Радио, дом 7, строение 1, этаж 2, офис 203<br>‍<strong>ПОЧТОВЫЙ АДРЕС:</strong>105005, г. Москва, ул. Радио, д. 7, стр. 1, офис 203, получатель — Ассоциация Киокусинкай России<br>‍<strong>ТЕЛЕФОН:</strong>+7 (495) 640-23-63<br>‍<strong>ЭЛЕКТРОННАЯ ПОЧТА:</strong>
+    <div class="text-block-2">
+      <strong>ФАКТИЧЕСКИЙ АДРЕС:</strong>105005, г. Москва, ул. Радио, дом 7, строение 1, этаж 2, офис 203<br>‍<strong>ПОЧТОВЫЙ АДРЕС:</strong>105005, г. Москва, ул. Радио, д. 7, стр. 1, офис 203, получатель — Ассоциация Киокусинкай России<br>‍<strong>ТЕЛЕФОН:</strong>+7 (495) 640-23-63<br>‍<strong>ЭЛЕКТРОННАЯ ПОЧТА:</strong>
       <a href="mailto:akr5@mail.ru">akr5@mail.ru</a>
     </div>
   </section>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66a205b868fe9e77cef34d1b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66ab4aa390c191aa5cae09bf" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="{% static 'js/webflow.js' %}" type="text/javascript"></script>
 </body>
 </html>
